
* `InvocationInterceptor.interceptDynamicTest(Invocation<Void>, ExtensionContext)` has
  been deprecated in favor of
  `InvocationInterceptor.interceptDynamicTest(Invocation<Void>, DynamicTestInvocationContext, ExtensionContext)`
  that provides access to the dynamic test executable via
  `DynamicTestInvocationContext.getExecutable()`.

==== New Features and Improvements

* Test classes can now be ordered by passing the fully-qualified name of a class
  implementing `ClassOrderer` as the value of the new
  `junit.jupiter.testclass.order.default` configuration parameter.
* `@ExtendWith` may now be used to register extensions declaratively via fields or
  parameters in test class constructors, test methods, and lifecycle methods. See
  <<../user-guide/index.adoc#extensions-registration-declarative, Declarative Extension
  Registration>> for details.
* `@RegisterExtension` fields may now be `private`.
* New `assertThrowsExactly()` method in `Assertions` which is a more strict version of
  `assertThrows()` that allows you to assert that the exception thrown is of the exact
  type specified.
* `assertDoesNotThrow()` in `Assertions` now supports suspending functions when called
  from Kotlin.
* New `assertInstanceOf()` methods which produce better error messages comparable to those
  produced by `assertThrows`. These new methods serve as a replacement for
  `assertTrue(obj instanceof X)`.
* `assertNull()` failure messages now include the actual object's type if the `toString()`
  implementation for the actual object returns `null` or `"null"`. This avoids the
  generation of confusing failure messages such as `expected <null> but was <null>`.
* `@TempDir` can now be used to create multiple temporary directories. Instead of creating
  a single temporary directory per context (i.e. test class or method) every declaration
  of the `@TempDir` annotation on a field or method parameter now results in a separate